maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:31: error: ';' expected but 'if' found.
    else if (estFaceMur() && !keepHandOnSideWall()) {droite() if(!estFaceMur) {avance();virages-=1} else {droite()}}
                                                              ^